
json_graph_lite 0.4a0, 2020-05-01
---------------------------------

- Added EXPERIMENTAL support for JGF
- Moved tests to under tests
- Changed serialization of an empty GraphList


json_graph_lite 0.3a0, 2020-04-27
---------------------------------

- Added GraphList
- Class Graph equipped with id
- Stated, that this library IS NOT currently JGF-compatible


json_graph_lite 0.1a0, 2020-04-26
---------------------------------

- Initial release
- Foundation classes: Graph, Node, Edge
- JSON de-/serialization