@@ -1,4 +1,10 @@
 
+json_graph_lite 0.5a0, 2020-05-07
+---------------------------------
+
+- Added .get_graph() method
+
+
 json_graph_lite 0.4a0, 2020-05-01
 ---------------------------------
 
